--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
+    "mdbootstrap": "^4.19.1",
+    "ng2-charts": "^2.2.3",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
