--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.9",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
     "@angular/forms": "~8.2.9",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "mdbootstrap": "^4.19.1",
     "ng2-charts": "^2.2.3",
     "ngx-toastr": "^10.0.4",
