--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hammerjs": "^2.0.8",
     "mdbootstrap": "^4.19.1",
     "ng2-charts": "^2.2.3",
+    "ngx-bootstrap": "^5.6.1",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
